k3s/infra/postgresql/postgresql-cluster.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
