k3s/infra/postgresql/postgresql-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql-rw-ingress
  namespace: postgresql
spec:
  entryPoints:
    - postgresql
  routes:
  - match: HostSNI(`postgresql-rw.k3s.hackbox.cc`)
    services:
    - name: postgresql-cluster-rw
      port: 5432
  tls:
    passthrough: false
    options:
      name: no-alpn

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql-r-ingress
  namespace: postgresql
spec:
  entryPoints:
    - postgresql
  routes:
  - match: HostSNI(`postgresql-r.k3s.hackbox.cc`)
    services:
    - name: postgresql-cluster-r
      port: 5432
  tls:
    passthrough: false
    options:
      name: no-alpn

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql-ro-ingress
  namespace: postgresql
spec:
  entryPoints:
    - postgresql
  routes:
  - match: HostSNI(`postgresql-ro.k3s.hackbox.cc`)
    services:
    - name: postgresql-cluster-ro
      port: 5432
  tls:
    passthrough: false
    options:
      name: no-alpn
